Updated to OIIO 2.4.3.0 bêta

--- a/subprojects/packagefiles/oiio/meson.build
+++ b/subprojects/packagefiles/oiio/meson.build
@@ -1,38 +1,33 @@
-project('OpenImageIO', 'cpp', 'c', version: '2.3.11.0')
+project('OpenImageIO', 'cpp', 'c', version: '2.4.3.0')
 ## Copyright 2008-present Contributors to the OpenImageIO project.
 ## SPDX-License-Identifier: BSD-3-Clause
 ## https://github.com/OpenImageIO/oiio/blob/master/LICENSE.md
 
 cpp = meson.get_compiler('cpp')
 
-#set (PROJ_NAME OIIO)    # short name, caps
-
-#option (EMBEDPLUGINS "Embed format plugins in libOpenImageIO" ON)
-#set (PLUGIN_SEARCH_PATH "" CACHE STRING "Default plugin search path")
-#file (TO_NATIVE_PATH "${PLUGIN_SEARCH_PATH}" PLUGIN_SEARCH_PATH_NATIVE)
-
-#option (OIIO_THREAD_ALLOW_DCLP "OIIO threads may use DCLP for speed" ON)
-#if (NOT OIIO_THREAD_ALLOW_DCLP)
-#    add_definitions ("-DOIIO_THREAD_ALLOW_DCLP=0")
-#endif ()
-
-#set (TEX_BATCH_SIZE "" CACHE STRING "Force TextureSystem SIMD batch size (e.g. 16)")
-#if (TEX_BATCH_SIZE)
-#    add_definitions ("-DOIIO_TEXTURE_SIMD_BATCH_WIDTH=${TEX_BATCH_SIZE}")
-#endif ()
-
-#if (NUKE_FOUND)
-#    add_subdirectory (src/nuke/txReader)
-#    add_subdirectory (src/nuke/txWriter)
-#endif ()
-
 add_project_arguments('-DOIIO_STATIC_DEFINE', language: 'cpp')
+
+compile_args_priv = [
+]
+
+boost_modules = [
+	'thread',
+]
+
+# Check for std::filesystem
+has_std_filsystem = cpp.has_type('std::filesystem::path', prefix: '#include <filesystem>')
+if has_std_filsystem
+	compile_args_priv += '-DUSE_STD_FILESYSTEM'
+else
+	boost_modules += 'filesystem'
+endif
 
 dep_fmt   = dependency('fmt')
 dep_imath = dependency('Imath')
+dep_imath_version = dep_imath.version().split('.')
 dep_tiff  = dependency('libtiff-4')
 dep_robin_map = dependency('robin-map')
-dep_boost = dependency('boost', version: '>=1.53', modules: ['filesystem', 'thread'], default_options: [
+dep_boost = dependency('boost', version: '>=1.53', modules: boost_modules, default_options: [
 	'BOOST_FILESYSTEM_NO_DEPRECATED=true',
 	'BOOST_FILESYSTEM_DISABLE_BCRYPT=true',
 ])
