[webextension] Resolve CDN links in the browser (dns_prefill)
	It allows to make use of browser DNS cache for better performances. In bonus, the webext-adder now enjoy of browser DNS shinies such as DoH.

	**Note!** The webext-adder does support this yet.

--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -39,6 +39,7 @@
 	"permissions": [
 		"https://twitter.com/*",
 		"https://mobile.twitter.com/*",
+		"dns",
 		"webRequest",
 		"webRequestBlocking",
 		"nativeMessaging"
