[GitHub Actions] Refactored release CI script
	Second part of the CI refactoring, it now reuses the build CI code. So a release is now what the regular CI yields.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master-staging, gh-action-test ]
 
   workflow_dispatch:
+  
+  workflow_call:
 
 jobs:
   build-archlinux-x86_64:
