--- a/subprojects/packagefiles/fmt/meson.build
+++ b/subprojects/packagefiles/fmt/meson.build
@@ -14,7 +14,7 @@
 # GPL-3.0 license with some part being explicitely shared under another license.
 project('FMT', 'cpp')
 incdirs = include_directories('include')
-fmt = static_library('fmt', 'src/format.cc', 'src/os.cc', include_directories: incdirs)
+fmt = static_library('fmt', 'src/format.cc', 'src/os.cc', include_directories: incdirs, build_by_default: false)
 
 fmt_ver = meson.get_compiler('cpp').get_define('FMT_VERSION', include_directories: incdirs, prefix: '#include <fmt/core.h>').to_int()
 fmt_vermajor = fmt_ver/10000
