--- a/subprojects/packagefiles/bzip2/meson.build
+++ b/subprojects/packagefiles/bzip2/meson.build
@@ -23,5 +23,5 @@ srcs = [
 	'decompress.c',
 	'bzlib.c',
 ]
-bzip2 = static_library('bzip2', srcs, include_directories: incdirs)
+bzip2 = static_library('bzip2', srcs, include_directories: incdirs, build_by_default: false)
 bzip2_dep = declare_dependency(link_with: bzip2, include_directories: incdirs)
