--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,56 @@ jobs:
         with:
           name: ubuntu-22_04-amd64-builddir
           path: build
+  build-ubuntu-20_04-amd64:
+    name: Ubuntu 20.04 (amd64)
+    runs-on: [ubuntu-20.04]
+    env:
+      CC: gcc-10
+      CXX: g++-10
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@e2f20e631ae6d7dd3b768f56a5d2af784dd54791
+      - name: Update apt cache
+        run: sudo apt update
+      - name: Install dependencies and tools
+        run: sudo apt install ninja-build gcc-10 g++-10 libsdl2-dev libfreetype-dev libfontconfig-dev libharfbuzz-dev libopenimageio-dev libboost-all-dev libcurl4-openssl-dev libdbus-1-dev liblcms2-dev python3-setuptools lintian libbrotli-dev
+      - name: Install Meson 0.59.0
+        run: sudo pip3 install meson>=0.59.0
+      - name: Install Mozilla's web-ext with npm
+        run: sudo npm install -g web-ext
+      - name: Setup project
+        run: meson build --prefix=/usr -Dstrip=true -Dcpp_link_args='-z now' -Dbuildtype=release -Db_lto=true
+      - name: Build project
+        run: ninja -C build
+      - name: Uploading arcollect-webextension.zip artifact
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
+        with:
+          name: build-ubuntu-20_04_webextension.zip
+          path: build/webextension/arcollect.zip
+      - name: Generate Debian package
+        run: ninja -C build "packaging/$(grep -oEm 1 "arcollect_[0-9\.]+-1_$(echo -n "$(dpkg-architecture -q DEB_HOST_ARCH)").deb" build/build.ninja)"
+        shell: bash
+      - name: Uploading Debian package artifact
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
+        with:
+          name: ubuntu-20_04-amd64-package
+          path: build/packaging
+      - name: Test project
+        run: ninja -C build test
+      - name: Link Debian package
+        run: ln "build/packaging/$(grep -oEm 1 "arcollect_[0-9\.]+-1_$(echo -n "$(dpkg-architecture -q DEB_HOST_ARCH)").deb" build/build.ninja)" arcollect.deb
+        shell: bash
+      - name: Lintian Debian package
+        run: lintian --no-tag-display-limit --dont-check-part debian/changelog,debian/copyright -I -E --verbose -- arcollect.deb
+      - name: Install Debian package
+        run: sudo dpkg -i arcollect.deb
+        shell: bash
+      - name: Upload build dir
+        if: always()
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
+        with:
+          name: ubuntu-20_04-amd64-builddir
+          path: build
   build-windows-2019-x64:
     name: Windows 2019 (x64)
     runs-on: [windows-2019]
@@ -130,7 +180,7 @@ jobs:
           name: windows-2019-builddir
           path: build
   check-webextensions-same:
-    needs: [build-wrapped, build-ubuntu-22_04-amd64]
+    needs: [build-wrapped, build-ubuntu-22_04-amd64, build-ubuntu-20_04-amd64]
     runs-on: [ubuntu-latest]
     steps:
       - name: Download build-wrapped_webextension.zip
@@ -143,19 +193,29 @@ jobs:
         with:
           name: build-ubuntu-22_04_webextension.zip
           path: build-ubuntu-22_04_webextension
+      - name: Download build-ubuntu-20_04_webextension.zip
+        uses: actions/download-artifact@v2
+        with:
+          name: build-ubuntu-20_04_webextension.zip
+          path: build-ubuntu-20_04_webextension
       - name: Make unpack dirs
-        run: mkdir build-wrapped build-ubuntu-22_04
+        run: mkdir build-wrapped build-ubuntu-22_04 build-ubuntu-20_04
       - name: Unpack build-wrapped_webextension.zip
         run: unzip ../build-wrapped_webextension/arcollect.zip
         working-directory: build-wrapped
       - name: Unpack build-ubuntu-22_04_webextension.zip
         run: unzip ../build-ubuntu-22_04_webextension/arcollect.zip
         working-directory: build-ubuntu-22_04
+      - name: Unpack build-ubuntu-20_04_webextension.zip
+        run: unzip ../build-ubuntu-20_04_webextension/arcollect.zip
+        working-directory: build-ubuntu-20_04
       - name: Compare build-wrapped and build-ubuntu-22_04 results
         run: diff -ry build-wrapped build-ubuntu-22_04
+      - name: Compare build-wrapped and build-ubuntu-20_04 results
+        run: diff -ry build-wrapped build-ubuntu-20_04
   merge-to-master:
     name: Merge 'master-staging' to 'master'
-    needs: [build-archlinux-x86_64, build-wrapped, build-ubuntu-22_04-amd64, build-windows-2019-x64, check-webextensions-same]
+    needs: [build-archlinux-x86_64, build-wrapped, build-ubuntu-22_04-amd64, build-ubuntu-20_04-amd64, build-windows-2019-x64, check-webextensions-same]
     runs-on: [ubuntu-latest]
     if: ${{ (github.event_name == 'push') && (github.ref == 'refs/heads/master-staging') }}
     steps:
